# manhwa-discovery

./: .dockerignore  .env.example  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  main.py  manga.json  mongo-init.js  nginx.conf  pyproject.toml  requirements.txt
backend/: AGENTS.md  __init__.py  main.py
backend/api/: AGENTS.md
backend/api/middleware/: auth.py  cache_headers.py  rate_limit.py
backend/api/routes/: __init__.py  auth.py  images.py  manhwa.py  user.py
backend/config/: __init__.py  settings.py
backend/database/: cache.py  connection.py
backend/models/: manhwa.py  user.py
backend/services/: AGENTS.md  comparison.py
backend/services/anilist/: __init__.py  client.py
backend/services/mangadex/: __init__.py  client.py
backend/utils/: __init__.py  errors.py  logger.py  validators.py
docs/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  VERSION_MANAGEMENT.md
frontend/: AGENTS.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/components/: AGENTS.md  Alert.jsx  BrowsePanel.jsx  ComparisonView.jsx  FilterPanel.jsx  LinkManagementModal.jsx  ManhwaCard.jsx  ManhwaList.jsx  SearchBar.jsx  SkeletonCard.jsx  UserListView.jsx
frontend/pages/: AGENTS.md  index.jsx  profile.jsx  search.jsx
frontend/pages/manhwa/: [id].jsx
frontend/services/: api.js  auth.js
frontend/src/: App.jsx  main.jsx
frontend/stores/: useAuthStore.js
frontend/styles/: components.css  globals.css
frontend/utils/: formatters.js  storage.js
tests/backend/: __init__.py  test_anilist_client.py  test_comparison_service.py  test_mangadex_client.py
tests/frontend/: ManhwaCard.test.jsx  SearchBar.test.jsx
