[project]
name = "manhwa-discovery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
    # Web framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    # Database & Caching
    "motor>=3.3.2",           # Async MongoDB driver
    "pymongo>=4.6.1",         # Sync MongoDB operations
    "redis>=5.0.1",
    # Authentication & Security
    "python-jose[cryptography]>=3.3.0",  # JWT handling
    "passlib[bcrypt]>=1.7.4",
    # HTTP & API
    "httpx>=0.26.0",          # Better async HTTP client
    "python-multipart>=0.0.9",
    # Utilities
    "rapidfuzz>=3.6.1",       # Fast fuzzy string matching
    "cachetools>=5.3.2",
    # Testing & Dev
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.1.15",
]
