[project]
name = "manhwa-discovery"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
    # Web framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    # Database & Caching
    "motor>=3.3.2",           # Async MongoDB driver
    "pymongo>=4.6.1",         # Sync MongoDB operations
    "redis>=5.0.1",
    # Authentication & Security
    "python-jose[cryptography]>=3.3.0",  # JWT handling
    "passlib[bcrypt]>=1.7.4",
    # HTTP & API
    "httpx>=0.26.0",          # Better async HTTP client
    "python-multipart>=0.0.9",
    # Utilities
    "rapidfuzz>=3.6.1",       # Fast fuzzy string matching
    "cachetools>=5.3.2",
    # Testing & Dev
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.1.15",
]

[dependency-groups]
dev = [
    "commitizen>=4.13.7",
    "pre-commit>=4.5.1",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.1"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
tag_format = "v$version"
changelog_file = "docs/CHANGELOG.md"
changelog_incremental = true
changelog_start_rev = "378e1ad"
annotated_tag = true

version_files = [
    "pyproject.toml:^version",
    "backend/__init__.py:^__version__",
]

[tool.commitizen.customize]
bump_pattern = "^(feat|fix|perf|refactor|docs|style|test|build|ci|chore|revert)?(\\(.*\\))?!?:"
bump_map = { "BREAKING CHANGE" = "MAJOR", "feat" = "MINOR", "fix" = "PATCH", "perf" = "PATCH", "refactor" = "PATCH" }
change_type_order = ["BREAKING CHANGE", "feat", "fix", "refactor", "perf", "docs", "style", "test", "build", "ci", "chore"]
